Added tests for the RecommendationService (+refactor a method's name)